crates/sutura-app/tests/snapshots/orders-placed-by-region__params@duckdb.snap
---
source: crates/sutura-app/tests/golden.rs
expression: query.params()
---
- Date:
    year: 2026
    month: 6
    day: 1
- Date:
    year: 2026
    month: 7
    day: 1
