crates/sutura-app/tests/snapshots/orders-placed-by-region__rows.snap
---
source: crates/sutura-app/tests/golden.rs
expression: rows
---
columns:
  - region
  - period
  - orders_placed
rows:
  - - Text: north
    - Text: 2026-06-01
    - Integer: 5
  - - Text: south
    - Text: 2026-06-01
    - Integer: 2
  - - Text: west
    - Text: 2026-06-01
    - Integer: 1
  - - "Null"
    - Text: 2026-06-01
    - Integer: 1
