crates/sutura-app/tests/snapshots/orders-placed-by-region__rows@duckdb.snap
---
source: crates/sutura-app/tests/golden/data_systems.rs
expression: stable(rows)
---
region	period	orders_placed
Text(north)	Text(2026-06-01)	Integer(5)
Text(south)	Text(2026-06-01)	Integer(2)
Text(west)	Text(2026-06-01)	Integer(1)
Null	Text(2026-06-01)	Integer(1)
